// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders correctly 1`] = `
<li
  className="c-timeline-item"
>
  <div
    className="c-timeline-item__body"
  >
    lorem ipsum dolor
  </div>
</li>
`;

exports[`Item renders correctly as the last item 1`] = `
<li
  className="c-timeline-item c-timeline-item--last"
>
  <div
    className="c-timeline-item__body"
  >
    lorem ipsum dolor
  </div>
</li>
`;

exports[`Item renders correctly with left styling 1`] = `
<li
  className="c-timeline-item c-timeline-item--left"
>
  <div
    className="c-timeline-item__body"
  >
    lorem ipsum dolor
  </div>
</li>
`;

exports[`Item renders correctly with loading styling 1`] = `
<li
  className="c-timeline-item c-timeline-item--loading"
>
  <div
    className="c-timeline-item__body"
  >
    lorem ipsum dolor
  </div>
</li>
`;

exports[`Item renders correctly with success styling 1`] = `
<li
  className="c-timeline-item c-timeline-item--success"
>
  <div
    className="c-timeline-item__body"
  >
    lorem ipsum dolor
  </div>
</li>
`;
